--- a/style.css
+++ b/style.css
@@ -97,10 +97,21 @@ body {
     margin-bottom:60px;
     border: 5px inset #DFDDDC;
 }
-.pantalla #formula{
+#formula, #blink{
     font-family: ericsson;
     font-size: 1.2rem;
+    display: inline;
 }
+
+#blink{
+    animation: parpadeo 1s linear infinite;
+}
+@keyframes parpadeo{
+    0%{opacity: 1;}
+    20%{opacity: 0;}
+    70%{opacity:1;}
+    100%{opacity: 1;}
+    }
 .pantalla #resultado{
     font-family: ds-digital;
     font-size: 2.2rem;
@@ -124,7 +135,7 @@ body {
     background-color: #696768;
 }
 
-.botones {
+.teclado {
 	position: relative;
     font-weight: bold;
     margin-bottom:30px;
@@ -160,7 +171,7 @@ body {
 .tecla_2 { grid-area: tecla_2; }
 .tecla_3 { grid-area: tecla_3; }
 
-.botones div{
+.teclado div{
     display:flex;
     justify-content: center;
     align-items: center;
@@ -168,32 +179,34 @@ body {
     border-radius: 5px;
     background-color: #919191;
 }
-.botones span{
+.teclado button{
     display:flex;
     justify-content: center;
     align-items: center;
     width:44px;
     height:34px;
+    font-weight: bold;
+    font-family: consolas;
     font-size: 1.2rem;
     border:1px solid rgb(14, 14, 14);
     border-radius:5px;
     background-color: #a39588;
-    box-shadow: inset 2px 2px 3px -2px rgba(255,255,255,0.9), 
+    box-shadow: inset 3px 3px 3px -2px rgba(255,255,255,0.9), 
                 inset -3px -3px 3px -2px rgba(0,0,0,0.9), 
                 2px 3px 4px -1px rgba(0,0,0,0.7);
     text-shadow: #ffffff .8px .8px 1px;
     cursor: pointer;
     user-select: none;
 }
-.igual span{
+.igual button{
     height:84px;
     background-color:rgb(65, 163, 255)
 }
-.tecla_ac span, .tecla_c span{
+.tecla_ac button, .tecla_c button{
     background-color: rgb(204, 58, 58);
     text-shadow: #ffffffb6 .5px .5px 1px;
 }
-.botones span:active{
+.teclado button:active{
     box-shadow: inset 3px 3px 3px -2px rgba(34, 34, 34, 0.9),
     inset -3px -3px 3px -2px rgba(34,34,34,0.9);
 }
