--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ Practicas Html/CSS/Javascript - Erik Medina
 }
 @font-face {
     font-family: ericsson;
-    src: url(../fonts/Ericsson.ttf);
+    src: url(../fonts/Ericsson.otf);
     font-display: swap;
 }
 @font-face {
@@ -339,6 +339,8 @@ body {
 .flechas{
     width:96px;
     height:72px;
+    font-family: ericsson;
+    font-size: 20px;
     border:1px solid rgba(14, 14, 14, 0.438);
     border-radius: 50% 50% 50% 50% / 40% 40% 60% 60%!important;
     background-color: #A39588!important;
@@ -346,8 +348,9 @@ body {
                 inset -3px -3px 3px -2px rgba(0,0,0,0.9), 
                 2px 3px 4px -1px rgba(0,0,0,0.7);
     display:grid!important;
-    grid-template-columns: repeat(3,32px);
-    grid-template-rows: 18px 27px 27px;
+    grid-template-columns: 32px 31px 30px;
+    grid-template-rows: 18px 22px 31px;
+    align-items: end;
 }
 .rightPress{
     box-shadow: inset 7px 1px 3px -3px rgba(255,255,255,0.9), 
