quito fondo azul al tocar elemento en disp moviles

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ Practicas Html/CSS/Javascript - Erik Medina
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 @font-face {
     font-family: ds-digital;
