--- a/css/style.css
+++ b/css/style.css
@@ -49,9 +49,9 @@ body {
     border-right: 5px solid #696768;
     border-top: 2px solid #696768;
     border-bottom: 2px solid #696768;
-	box-shadow: 15px 10px 25px 0px rgb(0 0 0 / 70%),inset 0px 60px 8px -50px rgba(100, 100, 100, 0.9),
-    inset 0px -56px 8px -50px rgba(255, 255, 255, 0.7),
-    inset 0px -70px 8px -50px rgba(100, 100, 100, 0.8);
+	box-shadow: 15px 10px 25px 0px #000000b3,inset 0px 60px 8px -50px #646464e6,
+    inset 0px -56px 8px -50px #ffffffb3,
+    inset 0px -70px 8px -50px #646464cc;
 }
 .calculadora::before{
     content:"";
@@ -60,8 +60,8 @@ body {
     left:0px;
     top:15px;
     height:1px;
-    background-color: rgba(255, 255, 255, 0.5);
-    box-shadow: 0px 0px 5px 2px rgba(255, 255, 255, 0.7);
+    background-color: #ffffff80;
+    box-shadow: 0px 0px 5px 2px #ffffffb3;
 }
 .calculadora::after{
     content:"";
