--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,7 @@ body {
     justify-content: flex-end;
 }
 .blink {
-    animation: parpadeo 1s steps(1) infinite;
+    animation: parpadeo .8s steps(1) infinite;
 }
 
 @keyframes parpadeo {
@@ -216,6 +216,9 @@ body {
     opacity:.1;
     padding-bottom: 2px;
     font-weight: bold;
+}
+.base--visible{
+    opacity:1;
 }
 
 .exponente{
@@ -316,6 +319,9 @@ body {
     text-shadow: #ffffff .8px .8px 1px;
     cursor: pointer;
 }
+.button:focus-visible{
+    outline: none;
+}
 .button--dark{
     height:73px;
     background-color:#7c6b5c;
@@ -339,7 +345,7 @@ body {
     position:relative;
 }
 
-.flechas{
+#flechas{
     width:96px;
     height:72px;
     font-family: ericsson;
