--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,9 @@ body {
     margin-bottom:60px;
     border: 5px inset #DFDDDC;
 }
+/* .ocultar > *{
+    opacity: 0;
+} */
 .formula, .blink, .contenedorFormula{
     font-family: ericsson;
     font-size: 1.3rem;
