--- a/css/style.css
+++ b/css/style.css
@@ -279,11 +279,14 @@ body {
 .button--dark {height:73px; background-color:#7c6b5c;}
 .button--red {background-color: #cb4718; text-shadow: #ffffffb6 .5px .5px 1px;}
 
-
-.button:active{
-    box-shadow: inset 3px 3px 3px -2px rgba(34, 34, 34, 0.9),
-    inset -3px -3px 3px -2px rgba(34,34,34,0.9)!important;
+/* Estilos para :active que se aplicarán en dispositivos no móviles */
+@media (hover: hover) {
+    .button:active{
+        box-shadow: inset 3px 3px 3px -2px rgba(34, 34, 34, 0.9),
+        inset -3px -3px 3px -2px rgba(34,34,34,0.9)!important;
+    }
 }
+
 .button--active{
     box-shadow: inset 3px 3px 3px -2px rgba(34, 34, 34, 0.9),
     inset -3px -3px 3px -2px rgba(34,34,34,0.9)!important;
